--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://avazoom.ml/">
+                    <a href="https://avasun.pw/">
                          <img src="assets/images/cfy-ja-134x179.jpg" alt="Mobirise" title="" style="height: 4.9rem;">
                     </a>
                 </span>
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section class="cid-s66vAkOG1r mbr-fullscreen mbr-parallax-background" id="header2-3">
+<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="cid-s66vAkOG1r mbr-fullscreen mbr-parallax-background" id="header2-3">
 
     
 
