--- a/page1.html
+++ b/page1.html
@@ -41,7 +41,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://avazoom.ml/">
+                    <a href="https://avasun.pw/">
                          <img src="assets/images/cfy-ja-134x179.jpg" alt="Mobirise" title="" style="height: 4.9rem;">
                     </a>
                 </span>
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="header6 cid-s67PAp7JjO mbr-fullscreen" id="header6-s">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header6 cid-s67PAp7JjO mbr-fullscreen" id="header6-s">
 
     
 
