--- a/page2.html
+++ b/page2.html
@@ -41,7 +41,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://avazoom.ml/">
+                    <a href="https://avasun.pw/">
                          <img src="assets/images/cfy-ja-134x179.jpg" alt="Mobirise" title="" style="height: 4.9rem;">
                     </a>
                 </span>
@@ -61,7 +61,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
