create github pages

--- a/page1.html
+++ b/page1.html
@@ -55,12 +55,12 @@
                 </li>
                 <li class="nav-item"><a class="nav-link link text-white display-4" href="https://vk.com/im?media=&sel=-196611219"><span class="mbri-key mbr-iconfont mbr-iconfont-btn"></span>Регистрация</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://vk.com/avasun_pw"><span class="mbri-cursor-click mbr-iconfont mbr-iconfont-btn"></span>
                         Группа AvaSun</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://vk.com/podderjka_avasun"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>Тех.поддержка игры</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://vk.me/join/AJQ1d96EuRf5ETAl5qdS1EiJ"><span class="mbri-help mbr-iconfont mbr-iconfont-btn"></span>Чат</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html"><span class="mbri-paperclip mbr-iconfont mbr-iconfont-btn"></span>Правила</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary-outline display-2" href="https://avasun543.github.io/"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn" style="font-size: 30px;"></span>Играть</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary-outline display-2" href="https://avasun.pw/"><span class="mbri-desktop mbr-iconfont mbr-iconfont-btn" style="font-size: 30px;"></span>Играть</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="header6 cid-s67PAp7JjO mbr-fullscreen" id="header6-s">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="header6 cid-s67PAp7JjO mbr-fullscreen" id="header6-s">
 
     
 
